Fixed header overlap on small + wide screens

--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,19 @@ main {
     }
 }
 
-/* @Media */
+/* Vertical @Media */
+
+@media only screen and (max-height: 575px) {
+    header .portrait { display: none; }
+}
+
+@media only screen and (max-height: 767px) {
+    header .portrait { max-width: 192px; }
+
+    .title { font-size: 48px; }
+}
+
+/* Horizontal @Media */
 
 @media (max-width: 320px) {
     .title { font-size: 42px; }
